k8s/deplloyment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-api
  labels:
    app: my-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: my-api
  template:
    metadata:
      labels:
        app: my-api
    spec:
      containers:
        - name: my-api
          image: 564186749873.dkr.ecr.us-east-1.amazonaws.com/dev/gestion-commande:latest
          ports:
            - containerPort: 8081
          imagePullPolicy: Always
