k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-api-service
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-scheme: internet-facing
  labels:
    app: my-api
spec:
  type: LoadBalancer
  selector:
    app: my-api
  ports:
    - port: 80
      targetPort: 8081
      protocol: TCP
